# Atomistic_Sim_Agent

./: .gitignore  AGENTS.md  DESIGN.md  Orchestrator.py  check_env.py  make_table_pptx.py  pyproject.toml  test_md_only.py
02.Source_code/asa_runtime/: .gitattributes  .gitignore  AGENTS.md  pyproject.toml
02.Source_code/asa_runtime/.asa/: AGENTS.md  SKILLS.md
02.Source_code/asa_runtime/docs/: gajae-parity-gap-ledger.md  neo4j-sim-agent-design.md  runtime_spine_contract.md
02.Source_code/asa_runtime/model_gateway/: NOTICE.md  tsconfig.json
02.Source_code/asa_runtime/scripts/: acquire_potential_candidate.py  add_provenance.py  apply_graphdb_import_bundle.py  audit_plan_completion.py  audit_runtime_spines.py  audit_scope_fidelity.py  build_kmc_field.py  build_level_set_timeline.py  build_surrogate_dataset.py  check_model_provider_config.py  check_workflow_gap_evidence.py  inspect_geometry.py  knowledge_db_plan.py  list_fixtures.py  list_provenance.py  physics_reality_report.py  plan_request.py  postprocess_lammps_execution.py  prepare_amorphous_structure_job.py  prepare_md_campaign_worker_bundle.py  probe_worker_capability.py  render_lammps_contract.py  render_remote_worker_plan.py  research_agent.py  research_graphdb_agent.py  run_agent_cli.py  run_demo.py  run_md_campaign_job.py  run_remote_capability_probe.py  run_remote_execution_plan.py  smoke_agent_plan.py  smoke_agents_sdk_runtime.py  smoke_production_gateway_client.py  smoke_transport.py  start_ui.py  validate_md_physics_gate.py  validate_md_production_acceptance.py  validate_potential_candidate.py
(+854 files in other folders)
