[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "atomistic-sim-agent"
version = "0.1.0"
description = "Agentic atomistic-to-feature-scale simulation controller"
requires-python = ">=3.12"
dependencies = [
  "neo4j>=6.2.0",
  "openai-agents>=0.17.5",
  "prompt-toolkit>=3.0.52",
]

[project.scripts]
asa = "sim_agent.cli.main:main"
atomistic-sim-agent = "sim_agent.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sim_agent"]
artifacts = ["ui/**"]

[tool.hatch.build.targets.sdist]
include = [
  "pyproject.toml",
  "sim_agent/**",
  "ui/**",
]
